--- a/src/css/hoan-tat.css
+++ b/src/css/hoan-tat.css
@@ -329,7 +329,7 @@ body {
   flex-direction: row;
   background-color: #99e5a5;
   width: 70%;
-  height: 8vw;
+  height: 120px;
   align-items: center;
   justify-content: center;
   margin-top: 4.5vw;
