--- a/src/css/thanh-toan.css
+++ b/src/css/thanh-toan.css
@@ -320,15 +320,16 @@ body {
 
 .status-order {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
   background-color: #99e5a5;
-  height: 90px;
-  border-radius: 2px;
   width: 70%;
-  margin: 3em 0 0 0;
-  border-radius: 5px;
+  height: 120px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 4.5vw;
   gap: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 5px;
 }
 
 .status-order i {
