--- a/src/css/trang-chu.css
+++ b/src/css/trang-chu.css
@@ -186,9 +186,10 @@ body {
 }
 
 .product-list {
+  display: none;
   top: 100%;
   background-color: #fff;
-  width: 83%;
+  width: 100%;
   border: 1px solid #ddd;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
