--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,9 +1,9 @@
 .footer {
-    background-color: #c0f5bb;
+    background-color: #73c56c;
     padding: 50px 20px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 60px 0 0 0;
     height: fit-content;
 }
