new file:   .vscode/launch.json 	modified:   .vscode/settings.json 	modified:   admin/index/accountPage.html 	modified:   admin/index/analyzePage.php 	modified:   admin/index/connect.php 	modified:   admin/index/customer.html 	deleted:    admin/index/customer2.html 	deleted:    admin/index/customer3.html 	modified:   admin/index/homePage.html 	modified:   admin/index/locdon.php 	deleted:    admin/index/orderDetail1.php 	renamed:    admin/index/orderDetail2.html -> admin/index/orderDetail2.php 	modified:   admin/index/orderPage1.php 	deleted:    admin/index/orderPage2.html 	modified:   admin/index/test.html 	modified:   admin/index/wareHouse.html 	deleted:    admin/index/wareHouse2.html 	modified:   admin/js/chuyentrang.js 	new file:   admin/js/hienthikhachhang.js 	new file:   admin/js/hienthisanpham_khohang.js 	new file:   admin/pages/thongke.php 	modified:   admin/style/accountStyle.css 	modified:   admin/style/analyzeStyle.css 	deleted:    admin/style/customer.css 	new file:   admin/style/customer1.css 	modified:   admin/style/header.css 	deleted:    admin/style/main.css 	new file:   admin/style/main1.css 	deleted:    admin/style/main_warehouse.css 	new file:   admin/style/main_warehouse1.css 	modified:   admin/style/orderDetail1.css 	renamed:    admin/style/orderStyle.css -> admin/style/orderStyle1.css 	deleted:    admin/style/reponsiveAnalyze.css 	new file:   admin/style/reponsiveAnalyze1.css 	deleted:    admin/style/reponsiveOrder.css 	new file:   admin/style/reponsiveOrder1.css 	new file:   admin/style/responsiveCustomer.css 	new file:   admin/style/responsiveHomePage.css 	new file:   admin/style/responsiveWareHouse.css

--- a/admin/style/accountStyle.css
+++ b/admin/style/accountStyle.css
@@ -160,7 +160,7 @@ td {
 .user-info {
   display: flex;
   align-items: center;
-  background-color: #40dafd;
+  background-color: #f2f2f2;
   border: 1px solid #e0e0e0;
   border-radius: 4px;
   padding: 10px;
@@ -197,4 +197,64 @@ td {
   border:1px solid white;
   border-radius: 100%;
   border-width: 2px;
+}
+.personal-info {
+  padding: 20px;
+width: 85%;
+margin: auto;
+}
+
+.personal-info h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.personal-info p {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 20px;
+}
+
+.info-container {
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.info-row {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+  border-bottom: 1px solid #ddd;
+}
+
+.info-row:last-child {
+  border-bottom: none;
+}
+
+.info-row label {
+  font-weight: bold;
+  color: #333;
+  width: 40%;
+}
+
+.info-row span {
+  color: #555;
+  width: 60%;
+  text-align: left;
+}
+
+.edit-info-btn {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #6aa173;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.edit-info-btn:hover {
+  background-color: #5a8c61;
 }
