--- a/src/css/user-register.css
+++ b/src/css/user-register.css
@@ -12,6 +12,7 @@
   --header-height: 70px;
 }
 
+
 * {
   margin: 0;
   padding: 0;
@@ -682,6 +683,10 @@ body {
   }
 
   .search-group {
+    gap: 20px;
+  }
+
+  .search-form {
     display: none;
   }
 
