--- a/src/css/search-styles.css
+++ b/src/css/search-styles.css
@@ -389,7 +389,7 @@
 
 /* Thông báo không tìm thấy kết quả */
 .no-results-message {
-  position: absolute;
+  position: static !important;
   top: 0;
   left: 0;
   width: 100%;
